--- a/climate-app/src/styles.scss
+++ b/climate-app/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/theming";
+@import "~bootstrap/scss/bootstrap";
+
+body{
+    margin: 0px;
+}
