something to look at

--- a/climate-app/src/app/app.component.html
+++ b/climate-app/src/app/app.component.html
@@ -15,6 +15,6 @@
     </button>
 </mat-toolbar>
 
-<div class="container-fluid">
+<div class="page-body container-fluid">
     <router-outlet></router-outlet>
 </div>
