--- a/climate-app/src/app/climate-page/climate-page.component.html
+++ b/climate-app/src/app/climate-page/climate-page.component.html
@@ -1,3 +1,7 @@
-<p>
-  climate-page works!
+<h1 class="mat-h1">
+    Welcome Earthling!
+</h1>
+
+<p class="mat-p">
+    We are still under construction. Come back soon! :)
 </p>
